--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,3 @@
-<!-- login.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -136,7 +135,7 @@
     </form>
     <div class="links-auth">
       <a href="{{ url_for('register') }}">Registrar-se</a>
-      <a href="{{ url_for('index') }}">Página Inicial</a>
+      <!-- Página Inicial removida -->
     </div>
   </main>
 
