--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,3 @@
-<!-- register.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -154,7 +153,7 @@
     </form>
     <div class="links-auth">
       <a href="{{ url_for('login') }}">Login</a>
-      <a href="{{ url_for('index') }}">Página Inicial</a>
+      <!-- Página Inicial removida -->
     </div>
   </main>
 
